# User_Posts_Api_BackendPython

./: .env  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
apps/authentication/: serializers.py  urls.py  views.py
apps/user/: managers.py  models.py  serializers.py  urls.py  views.py
backend/configs/: settings.py  urls.py
backend/core/: pagination.py
backend/templates/: register.html
configs/: settings.py  urls.py
mysql/: auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  binlog.000005  binlog.000006  binlog.000007  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  mysql_upgrade_history  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
mysql/#innodb_redo/: #ib_redo10
mysql/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
mysql/mysql/: general_log_214.sdi  slow_log_215.sdi
mysql/performance_schema/: accounts_146.sdi  binary_log_trans_190.sdi  cond_instances_81.sdi  data_lock_waits_162.sdi  data_locks_161.sdi  error_log_82.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_errors_su_144.sdi  events_stages_cu_112.sdi  events_stages_hi_113.sdi  events_stages_hi_114.sdi  events_stages_su_115.sdi  events_stages_su_116.sdi  events_stages_su_117.sdi  events_stages_su_118.sdi  events_stages_su_119.sdi  events_statement_120.sdi  events_statement_121.sdi  events_statement_122.sdi  events_statement_123.sdi  events_statement_124.sdi  (+88 more)
(+36 files in other folders)
